--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "keen-slider": "^6.8.6",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
